--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         </li>
       </ul>
     </nav>
+    <div class="contenido">
+      <div class="contenedor-max">
+        <p>Únete a nuestro equipo</p>
+        <p>El mejor lugar para trabajar</p>
+        <p>Porque programando es que es andamos, únete a PEQA.dev.</p>
+        <li class="item button">
+          <a>Ùnete <img src="./img/icn arrow-right .icn-xs.png" /></a>
+        </li>
+
+        <div class="seccion">
+          <img src="https://lorempixel.com/1920/1080/" />
+          <p>Párrafo de ejemplo</p>
+        </div>
+      </div>
+    </div>
 
     <footer></footer>
   </body>
