--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
     </nav>
     <div class="contenido">
       <div class="contenedor-max">
-        <p>Únete a nuestro equipo</p>
+        <a>Únete a nuestro equipo</a>
         <p>El mejor lugar para trabajar</p>
         <p>Porque programando es que es andamos, únete a PEQA.dev.</p>
-        <li class="item button">
-          <a>Ùnete <img src="./img/icn arrow-right .icn-xs.png" /></a>
-        </li>
+        <ul class="menu">
+          <li class="item button">
+            <a>Ùnete <img src="./img/icn arrow-right .icn-xs.png" /></a>
+          </li>
+        </ul>
 
         <div class="seccion">
           <img src="https://lorempixel.com/1920/1080/" />
